# flet-app

./: pyproject.toml
.github/workflows/: apk-build.yml
src/: main.py  new_icon.py
