[project]
name = "antest_demo"
version = "0.13.0"
description = ""
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.1",
]

[tool.flet.android]
bundle_id = "com.mycompany.antest_demo"
dependencies = [
  "pyjnius","https://github.com/Fector101/android_notify/archive/flet-appicon.zip"
]

[tool.flet]
product = "Antest demo"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]
[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "3.16.0"
